[package]
name = "ocsp-x509"
version = "0.1.1"
description = """
An experimental, modified version of RustCrypto's x509-ocsp library. Used as a temporary replacement until that crate is released.
https://github.com/RustCrypto
"""
authors = ["Brian Hession"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bhesh/ocsp-x509/"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "x509"]
readme = "README.md"
edition = "2021"
rust-version = "1.73"

[lib]
name = "ocsp_x509"
path = "src/lib.rs"

[dependencies]
const-oid = { version = "0.9.5", default-features = false, features = ["db"] }
der = { version = "0.7.8", default-features = false, features = ["alloc", "derive", "flagset", "oid"] }
rand_core = { version = "0.6.4", default-features = false }
signature = { version = "2.1.0", default-features = false, features = ["digest", "rand_core"] }
spki = { version = "0.7.2", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.2.4", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5" }
sha1 = { version = "0.10.6", default-features = false, features = ["oid"] }
sha2 = { version = "0.10.8", default-features = false, features = ["oid"] }
rsa = { version = "0.9.2", default-features = false, features = ["pem", "pkcs5", "sha1", "sha2"] }
