[package]
name = "ocsp-x509"
version = "0.2.0"
description = "DEPRECATED. Use RustCrypto's x509-ocsp."
authors = ["Brian Hession"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bhesh/ocsp-x509/"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "x509"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"
